--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 .cabecalho {
     background-color: #51025a;
+    color: white;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -13,5 +14,5 @@
 
 .cabecalho-lista-item{
     display: inline-block;
-
+    margin: 0 16px;
 }
